tests/syntactic/printsize_directive2/printsize_directive2.err
Error: Redefinition of input directives for relation C in file printsize_directive2.dl at line 6
.printsize A,B,C
-----------^-----
Previous definition in file printsize_directive2.dl at line 5
.printsize C
-----------^-
1 errors generated, evaluation aborted
