tests/syntactic/printsize_directive2/printsize_directive2.dl
.decl A(x:number)
.decl B(x:number)
.decl C(x:number)

.printsize C
.printsize A,B,C
